Fix issue where footer was covering content

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,6 +40,10 @@
     margin-bottom: 25px;
 }
 
+body { 
+    padding-bottom: 70px;
+}
+
 .test-style {
     font-weight: bold;
     color: rebeccapurple;
